# CortexGit

./: .env.example  .gitignore  AUDIT_FINDINGS.md  CHANGELOG.md  CONTRIBUTING.md  CortexGit_Revised_Architecture(Bigger Picture).docx  LIBRARY_PACKAGING.md  MANIFEST.in  PROGRESS.md  README.md  REG_Architecture_v1.0.docx  RELEASE_CHECKLIST.md  alembic.ini  cortexgit_test.db-shm  cortexgit_test.db-wal  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
api/: main.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  GETTING_STARTED.md  INJECTION_GUIDE.md  LM_STUDIO_SETUP.md  PROVIDERS.md  REG_GUIDE.md
examples/: README.md  agent_demo.py  agent_gemma_openrouter.py  agent_lmstudio.py  multi_agent_coordination.py  research_agent.py  simple_chat_agent.py  task_automation_agent.py
tests/: conftest.py  db_helper.py  test_centrality.py  test_conflict_detector.py  test_context_assembler.py  test_context_assembler_reg.py  test_context_route.py  test_db_migration.py  test_e2e_full_pipeline.py  test_embeddings.py  test_entity_extractor.py  test_entity_node_validation.py  test_entity_pull.py  test_entity_pull_reg.py  test_entity_registry.py  test_event_logger.py  test_expiration.py  test_graph_repository.py  test_importance.py  test_injection.py  test_injection_integration.py  test_llm_providers.py  test_provider_implementations.py  test_recency_filter.py  test_reg_end_to_end.py  test_reg_extractor.py  test_reg_multi_agent.py  test_reg_pipeline.py  test_reg_schema.py  test_reinforcement.py  test_retrieval.py  test_semantic_recall.py  test_snapshot_trigger.py  (+4 more)
(+42 files in other folders)
