# pyproject.toml
[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortexgit"
version = "0.1.0"
description = "Persistent memory for LLM agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "CortexGit Contributors", email = ""}]

dependencies = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.28.0",
    "pgvector>=0.1.0",
    "anthropic>=0.25.0",
    "openai>=1.0.0",
    "jsonschema>=4.0.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "alembic>=1.11.0",
]

[project.urls]
Repository = "https://github.com/sanskar292/CortexGit"
Issues = "https://github.com/sanskar292/CortexGit/issues"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/cortexgit --cov-report=html"
